# gmsh-project

./: .gitignore  CMakeLists.txt  README.md  circle.msh  cube.msh  main.cpp  run.sh  t1.msh  test_0.cpp  test_1.cpp  test_2.cpp
lab1_meshes/: CMakeLists.txt
lab1_meshes/stl/: data.stl
lab1_meshes/torus/: main.cpp
lab3_fenicsx/: test_E.pvd  test_j000000.vtu  test_phi.pvd
lab3_fenicsx/heat/: solution000001.vtu  solution000003.vtu  solution000004.vtu  solution000005.vtu  solution000006.vtu  solution000009.vtu
labs/: README.md
labs/lab1_meshes/stl/: main.cpp  pencil.stl  statue.STL
labs/lab2_vtk/: CMakeLists.txt  main.cpp
labs/lab3_fenicsx/: electricity.py  test_E000000.vtu  test_j.pvd  test_phi000000.vtu
labs/lab3_fenicsx/heat/: solution000000.vtu  solution000002.vtu  solution000007.vtu  solution000008.vtu
microproject/: CMakeLists.txt  README.md
microproject/results/: front.csv  temperature.csv
microproject/src/: main.cpp
microproject/src/core/: boundary.hpp  grid.cpp  grid.hpp  materials.hpp  solver.cpp  solver.hpp
microproject/src/export/: csv_writer.cpp  csv_writer.hpp
microproject/src/render/: colormap.hpp  renderer.cpp  renderer.hpp
microproject/src/scenes/: block_melt.cpp  block_melt.hpp  icicle.cpp  icicle.hpp  scene.hpp  snowflake.cpp  snowflake.hpp  stefan_1d.cpp  stefan_1d.hpp
microproject/validation/: compare.py
